# solid-rotary-phone

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.mini  Makefile  boot.sh  deploy.sh  export.sh  fonts.md  go.sh  go2.sh  go3.sh  go4.sh  make.py  nginx.conf  password  pavucontrol.md  readme.md  requirements.txt  setup.py  util.py  xxx.txt
certs/: cert.pem  key.pem
cxx/: CMakeLists.txt  a.cpp  cell.cpp  cell.h  config.cpp  config.h  generate_ly.cpp  main.cpp  main_make_book.cpp  main_make_chord.cpp  parse.cpp  parse.h  to_html.cpp  to_html.h  util.cpp  util.h
source/: Makefile  bohemian-like-you-voice.ly  bohemian-like-you.ly  bohemian-like-you.rst  bohemian-like-you.tex  conf-garenne.py  conf-pscl.py  conf.py  conf.template.py  creep.rst  garenne.json  index-garenne.rst  index-pscl.rst  index.rst  index.template.rst  print.css  pscl.json  scar-tissue.ly  scar-tissue.rst  style.css  ultimate-chorus.json  welcome.html  work.json
source/Dandy_Warhol/bohemian-like-you/: bohemian-like-you-data.ly  bohemian-like-you-voice-1.ly
source/Matmatah/: au_conditionnel-solo.ly  au_conditionnel.rst
source/Rolling_Stones/wild_horses/: base_solo_1.ly  wild_horses.rst
source/The_Beatles/Come_together/: base_solo_1.ly  base_solo_final.ly  come_together.rst  come_together_solo_1.ly  (+3 more)
source/_static/: theme_overrides.css
source/bohemian-like-you/: bohemian-like-you-data.ly  bohemian-like-you-voice-2.ly  bohemian-like-you.ly  bohemian-like-you.rst
source/books/: Makefile  lgc.yml  move-the-line.tex  spcl.tex  sunny-bd.tex  sunny_bd.yml  walk-the-line.tex  work.yml
source/macros/: 2.tex  Makefile  buildbook.sh  buildpngly.sh  buildtex.sh  macros.ly  preamble.tex
source/songs/: Makefile  sunny-bd.tex  ultimate-chorus.tex
source/style/: lolo.bf  lolo_flat.bf  lolo_sharp.bf  print.css  style.css
src/srp/: .flaskenv
srp/: aaa.py
test/: test_f1.py
xxx/: a.tex  b.tex  lyrics.tex  poem.tex
yoga/: yoga.py
(+194 files in other folders)
